# Bot-obsidian

./: .env.example  .gitignore  .mcp.json  AGENTS-IMPROVEMENT-SPEC.md  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/: 21st-sdk.md  branding.md  color-theory.md  content-strategy.md  copywriting.md  data-viz.md  database.md  design-system.md  devops.md  email-marketing.md  figma-to-code.md  git-workflow.md  growth.md  landing-page.md  legal.md  mobile-ux.md  monetization.md  motion-design.md  performance.md  product.md  project-scaffold.md  security.md  seo.md  social-media.md  system-design.md  testing.md  typography.md  ui-design.md  ux-research.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agents/: .env.example  package.json  server.ts
app/: config.py  logging_config.py  main.py
app/analytics/: __init__.py  feature_engine.py
app/api/: run.py  server.py
docs/: 21st-sdk-reference.md
scripts/: live_bot.py  m5_scalp_backtest.py  okx_backtest.py  okx_check.py  setup_and_run.sh  test_all_strategies.py  test_aura.py  test_breakout_all_assets.py  test_breakout_alts.py  test_breakout_flip.py  test_breakout_optimize.py  test_compare_all.py  test_donchian.py  test_elliott.py  test_h2_multi_asset.py  test_hypotheses.py  test_mexc_all.py  test_mexc_coinglass.py  test_mexc_full.py  test_real_oi.py  test_reversal.py  test_super.py  test_swing.py
tests/: conftest.py  test_backtest.py  test_exit_manager.py  test_feature_engine.py  test_models.py  test_monitoring.py  test_new_strategies.py  test_orchestrator.py  test_paper_executor.py  test_risk_manager.py  test_state_machine.py  test_strategies.py  test_strategy.py
webapp/: index.html
(+80 files in other folders)
