[project]
name = "bot-obsidian"
version = "0.1.0"
description = "Multi-Layer Crypto Decision Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "python-telegram-bot>=20.7,<21",
    "aiosqlite>=0.19,<1",
    "ccxt>=4.1,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
bot-obsidian = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "scripts*", "data*"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
