[project]
name = "bot-obsidian"
version = "0.1.0"
description = "Multi-Layer Crypto Decision Engine"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
